Added publishedYear and pages to the main book site

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -75,6 +75,8 @@
                     <h3>@book.title</h3>
                     <p><strong>Autor:</strong> @book.author</p>
                     <p><strong>ISBN:</strong> @book.isbn</p>
+                    <p><strong>Rok publikacji:</strong> @book.publishYear</p>
+                    <p><strong>Liczba stron:</strong> @book.pages</p>
                     <p><strong>Status:</strong> @entry.status</p>
                 }.getOrElse {
                     <p>Szczegóły książki będą wyświetlone tutaj po kliknięciu.</p>
