--- a/app/views/addBook.scala.html
+++ b/app/views/addBook.scala.html
@@ -1,4 +1,4 @@
-@(bookForm: play.api.data.Form[String])(implicit messages: play.api.i18n.Messages)
+@(bookForm: play.api.data.Form[String])(implicit request: play.api.mvc.RequestHeader, messages: play.api.i18n.Messages)
 
 @import controllers.routes
 @import helper._
@@ -13,23 +13,24 @@
     </div>
 
     @helper.form(action = routes.HomeController.addBookSubmit()) {
+        @CSRF.formField
 
-    @* Display form errors *@
-    @bookForm.globalErrors.map { error =>
-    <div class="alert alert-danger">@error.message</div>
-    }
+        @* Display form errors *@
+        @bookForm.globalErrors.map { error =>
+            <div class="alert alert-danger">@error.message</div>
+        }
 
-    <div class="mb-3">
-        @helper.inputText(bookForm("isbn"), '_label -> "ISBN", 'class -> "form-control")
-    </div>
-<!--    <div class="mb-3">-->
-<!--        @helper.inputText(bookForm("title"), '_label -> "Tytuł", 'class -> "form-control")-->
-<!--    </div>-->
-<!--    <div class="mb-3">-->
-<!--        @helper.inputText(bookForm("author"), '_label -> "Autor", 'class -> "form-control")-->
-<!--    </div>-->
+        <div class="mb-3">
+            @helper.inputText(bookForm("isbn"), '_label -> "ISBN", 'class -> "form-control")
+        </div>
+    <!--    <div class="mb-3">-->
+    <!--        @helper.inputText(bookForm("title"), '_label -> "Tytuł", 'class -> "form-control")-->
+    <!--    </div>-->
+    <!--    <div class="mb-3">-->
+    <!--        @helper.inputText(bookForm("author"), '_label -> "Autor", 'class -> "form-control")-->
+    <!--    </div>-->
 
-    <button type="submit" class="btn btn-primary">Dodaj książkę</button>
+        <button type="submit" class="btn btn-primary">Dodaj książkę</button>
     }
 
 </div>
