Update on the space between elements

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -91,7 +91,7 @@ username: Option[String] = None)(implicit request: play.api.mvc.RequestHeader)
         <div class="col-md-5">
             <div class="green-background-panel">
                 @selectedBook.map { case (entry, book) =>
-                <div class = "d-flex gap-2 from image" >
+                <div class = "mb-3" >
                     <a href="@routes.HomeController.deleteBook(entry.id)" class="btn btn-light btn-lg shadow-sm">
                         <i class="bi bi-plus-lg"></i> Usuń książkę
                     </a>
