--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -100,7 +100,39 @@ filters: Map[String, String] = Map.empty)(implicit request: play.api.mvc.Request
                     }
                 }
             </ul>
+        </div>
+        <div class="dropdown mb-3 ms-2">
+            <button class="btn btn-outline-secondary dropdown-toggle"
+                    type="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false">
+                Sortuj
+            </button>
+            <ul class="dropdown-menu">
+                @defining(List(
+                    ("title_asc", "Tytuł ↑"),
+                    ("title_desc", "Tytuł ↓"),
+                    ("author_asc", "Autor ↑"),
+                    ("author_desc", "Autor ↓"),
+                    ("year_asc", "Rok ↑"),
+                    ("year_desc", "Rok ↓")
+                )) { sortOptions =>
 
+                    @for((sortParam, label) <- sortOptions) {
+                        @defining(filters + ("sort" -> sortParam)) { queryMap =>
+                            <li>
+                                <a class="dropdown-item @if(filters.get("sort").contains(sortParam)) { active }"
+                                href="@(
+                                    routes.HomeController.index().url + 
+                                    "?" + queryMap.map { case (k,v) => k + "=" + v }.mkString("&")
+                                )">
+                                    @label
+                                </a>
+                            </li>
+                        }
+                    }
+                }
+            </ul>
         </div>
     </div>
 
