Added and changed add buttons

--- a/app/views/addPublication.scala.html
+++ b/app/views/addPublication.scala.html
@@ -54,7 +54,7 @@
                         publicationForm("doi"),
                         Symbol("_label") -> "DOI",
                         Symbol("class") -> "form-control",
-                        Symbol("placeholder") -> "Wpisz numer DOI",
+                        Symbol("placeholder") -> "zacznij od 10.",
                         Symbol("_showConstraints") -> false
                     )
                 </div>
