Slight change to the drawing

--- a/app/views/drawBook.scala.html
+++ b/app/views/drawBook.scala.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="container py-5 text-center">
-    <h1 class="mb-4">📚 Losowanie książki „Do przeczytania”</h1>
+    <h1 class="mb-4"> Losowanie książki do przeczytania</h1>
 
     @bookData.map { case (entry, maybeBook) =>
     @maybeBook.map { book =>
